# blackhole-sim

./: .gitignore  CMakeLists.txt
src/: defines.hpp  gpu_types.hpp  main.cpp  renderer.cpp  renderer.hpp  solver.cpp  solver.hpp
src/shaders/: geodesic.metal
